[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/levels/Level.tscn" type="PackedScene" id=1]
[ext_resource path="res://res/images/pixel.svg" type="Texture" id=2]
[ext_resource path="res://src/tools/Fade.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/levels/ThirdLevel.gd" type="Script" id=4]
[ext_resource path="res://src/entities/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://res/images/Heart.png" type="Texture" id=6]
[ext_resource path="res://src/entities/Enemy.tscn" type="PackedScene" id=7]

[sub_resource type="Animation" id=7]
resource_name = "Explode"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("ExplodeParticles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.1, 2.1, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.341176, 0.341176, 0.341176, 1 ), Color( 0.12549, 0.12549, 0.12549, 1 ), Color( 0.278431, 0.278431, 0.278431, 1 ), Color( 0.0745098, 0.0745098, 0.0745098, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ExplodeParticles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.341176, 0.341176, 0.341176, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Throb"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 0.55, 0.55 ), Vector2( 0.5, 0.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ExplodeParticles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4498.5, 26 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 159.5, 101 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 159.5, 200 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 500, 200 )

[node name="ThirdLevel" instance=ExtResource( 1 )]
position = Vector2( -2, -1 )
script = ExtResource( 4 )
SCORE_PREFIX = ""

[node name="BossTrigger" type="Position2D" parent="DialogHandler" index="0"]
position = Vector2( 1691, 197 )
scale = Vector2( 0.1, 1 )
__meta__ = {
"_gizmo_extents_": 719.2
}

[node name="Objects" type="Node2D" parent="." index="2"]

[node name="Heart" type="Sprite" parent="Objects" index="0"]
modulate = Color( 0.341176, 0.341176, 0.341176, 1 )
position = Vector2( 2151, 136 )
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Objects/Heart" index="0"]
autoplay = "Throb"
anims/Explode = SubResource( 7 )
anims/RESET = SubResource( 5 )
anims/Throb = SubResource( 6 )

[node name="ExplodeParticles" type="CPUParticles2D" parent="Objects/Heart" index="1"]
show_behind_parent = true
amount = 90
lifetime = 4.0
emission_shape = 2
emission_rect_extents = Vector2( 1, 1 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 117.1
initial_velocity_random = 0.55
angular_velocity_random = 0.5
angle_random = 1.0
scale_amount = 20.0
color = Color( 0.0588235, 0.0588235, 0.0588235, 1 )

[node name="Ground" type="StaticBody2D" parent="Objects" index="1"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
position = Vector2( 512, 580 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Objects/Ground" index="0"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
position = Vector2( 3967, -2 )
scale = Vector2( 9002, 50 )
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="Objects/Ground" index="1"]
position = Vector2( 3966.5, -1 )
shape = SubResource( 1 )

[node name="Terrain2" type="StaticBody2D" parent="Objects" index="2"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
position = Vector2( 1053, 455 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Objects/Terrain2" index="0"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
scale = Vector2( 319.75, 198.688 )
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="Objects/Terrain2" index="1"]
position = Vector2( 0, 2 )
shape = SubResource( 2 )

[node name="Terrain3" type="StaticBody2D" parent="Objects" index="3"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
position = Vector2( 1365, 366 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Objects/Terrain3" index="0"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
scale = Vector2( 319.75, 400 )
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="Objects/Terrain3" index="1"]
position = Vector2( 0, 2 )
shape = SubResource( 3 )

[node name="Terrain4" type="StaticBody2D" parent="Objects" index="4"]
modulate = Color( 0.486275, 0.486275, 0.486275, 1 )
position = Vector2( 3012, 355 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Objects/Terrain4" index="0"]
modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
position = Vector2( 201, 0 )
scale = Vector2( 1000, 400 )
texture = ExtResource( 2 )

[node name="Hitbox" type="CollisionShape2D" parent="Objects/Terrain4" index="1"]
position = Vector2( 201, 2 )
shape = SubResource( 4 )

[node name="Entities" type="Node2D" parent="." index="3"]

[node name="Player" parent="Entities" index="0" instance=ExtResource( 5 )]
position = Vector2( 506, 326 )
BOUNDS = Vector2( 0, 8294 )

[node name="Pellets" type="Node2D" parent="Entities" index="1"]

[node name="Enemies" type="Node2D" parent="Entities" index="2"]

[node name="Enemy" parent="Entities/Enemies" index="0" instance=ExtResource( 7 )]
position = Vector2( 2819, 94 )
BOUNDS = Vector2( 1563, 3748 )
BOSS_ENEMY = true

[node name="Enemy2" parent="Entities/Enemies" index="1" instance=ExtResource( 7 )]
position = Vector2( 2905, 93 )
BOUNDS = Vector2( 1563, 3748 )
BOSS_ENEMY = true

[node name="Enemy3" parent="Entities/Enemies" index="2" instance=ExtResource( 7 )]
position = Vector2( 2990, 94 )
BOUNDS = Vector2( 1563, 3748 )
BOSS_ENEMY = true

[node name="Enemy4" parent="Entities/Enemies" index="3" instance=ExtResource( 7 )]
position = Vector2( 3079, 93 )
BOUNDS = Vector2( 1563, 3748 )
BOSS_ENEMY = true

[node name="Enemy5" parent="Entities/Enemies" index="4" instance=ExtResource( 7 )]
position = Vector2( 3167, 93 )
BOUNDS = Vector2( 1563, 3748 )
BOSS_ENEMY = true

[node name="Enemy6" parent="Entities/Enemies" index="5" instance=ExtResource( 7 )]
position = Vector2( 3256, 93 )
BOUNDS = Vector2( 1563, 3748 )
BOSS_ENEMY = true

[node name="Lights" type="Node2D" parent="." index="4"]

[node name="Fades" type="Node2D" parent="." index="5"]

[node name="First" parent="Fades" index="0" instance=ExtResource( 3 )]
position = Vector2( 943, 249 )
scale = Vector2( 2000, 800 )

[node name="Second" parent="Fades" index="1" instance=ExtResource( 3 )]
position = Vector2( 2307, 182 )
scale = Vector2( 3000, 800 )

[node name="BossTimer" type="Timer" parent="." index="6"]
one_shot = true

[connection signal="dialog_playing" from="DialogHandler" to="." method="_on_DialogHandler_dialog_playing"]
[connection signal="dialog_playing" from="DialogHandler" to="Entities/Player" method="_on_DialogHandler_dialog_playing"]
[connection signal="animation_finished" from="Objects/Heart/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="playDialog" from="Entities/Player" to="DialogHandler" method="playDialogOption"]
[connection signal="startBossFight" from="Entities/Player" to="Entities/Enemies/Enemy" method="on_start_boss_fight"]
[connection signal="startBossFight" from="Entities/Player" to="Entities/Enemies/Enemy2" method="on_start_boss_fight"]
[connection signal="startBossFight" from="Entities/Player" to="Entities/Enemies/Enemy3" method="on_start_boss_fight"]
[connection signal="startBossFight" from="Entities/Player" to="Entities/Enemies/Enemy4" method="on_start_boss_fight"]
[connection signal="startBossFight" from="Entities/Player" to="Entities/Enemies/Enemy5" method="on_start_boss_fight"]
[connection signal="startBossFight" from="Entities/Player" to="Entities/Enemies/Enemy6" method="on_start_boss_fight"]
[connection signal="finished" from="Fades/First" to="." method="_on_Fade_First_finished"]
[connection signal="finished" from="Fades/Second" to="." method="_on_Fade_Second_finished"]
[connection signal="timeout" from="BossTimer" to="Entities/Player" method="_on_BossTimer_timeout"]
